--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by
+      <a href="https://github.com/benjwu2" target="_blank">Benjamin Wu</a>.
     </div>
   </body>
 </html>
