--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </div>
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H/hub"
+        target="_blank"
         >Frontend Mentor</a
       >. Coded by
       <a href="https://github.com/benjwu2" target="_blank">Benjamin Wu</a>.
