add alt attribute to QR code image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
   <body>
     <div class="background">
       <div class="qr-container">
-        <img class="qr-container__qr-code" src="./images/image-qr-code.png" />
+        <img
+          class="qr-container__qr-code"
+          src="./images/image-qr-code.png"
+          alt="a QR code"
+        />
         <div class="qr-container__textbox">
           <h3 class="qr-container__title">
             Improve your front-end skills by building projects
