replace div element with footer element

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a
         href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H/hub"
@@ -41,6 +41,6 @@
         >Frontend Mentor</a
       >. Coded by
       <a href="https://github.com/benjwu2" target="_blank">Benjamin Wu</a>.
-    </div>
+    </footer>
   </body>
 </html>
