add main element around content

--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="background">
-      <div class="qr-container">
-        <img
-          class="qr-container__qr-code"
-          src="./images/image-qr-code.png"
-          alt="a QR code"
-        />
-        <div class="qr-container__textbox">
-          <h3 class="qr-container__title">
-            Improve your front-end skills by building projects
-          </h3>
-          <p class="qr-container__label">
-            Scan the QR code to visit Frontend Mentor and take your coding
-            skills to the next level
-          </p>
+    <main>
+      <div class="background">
+        <div class="qr-container">
+          <img
+            class="qr-container__qr-code"
+            src="./images/image-qr-code.png"
+            alt="a QR code"
+          />
+          <div class="qr-container__textbox">
+            <h3 class="qr-container__title">
+              Improve your front-end skills by building projects
+            </h3>
+            <p class="qr-container__label">
+              Scan the QR code to visit Frontend Mentor and take your coding
+              skills to the next level
+            </p>
+          </div>
         </div>
       </div>
-    </div>
+    </main>
     <footer class="attribution">
       Challenge by
       <a
